--- a/src/layout/_header.html
+++ b/src/layout/_header.html
@@ -1,13 +1,15 @@
 <header class="header">
-  <div class="header__content content-width">
-    <a class="header__logo logo" href="index.html">
-      <img src="img/logo.png" width="100px" alt="Логотип">
-    </a>
-    <div class="header__navigation navigation">
-      <div class="navigation__burger">
-        <span></span>
+  <div class="container-wide">
+    <div class="header__content">
+      <a class="header__logo logo" href="index.html">
+        <img src="assets/img/logo.png" width="100px" alt="Логотип">
+      </a>
+      <div class="header__navigation navigation">
+        <div class="navigation__burger">
+          <span></span>
+        </div>
+        @@include('../components/_navigation.html')
       </div>
-      @@include('_navigation.html')
     </div>
   </div>
 </header>
