--- a/Lean-In/css/style.css
+++ b/Lean-In/css/style.css
@@ -93,10 +93,8 @@ h6 {
   font-weight: 400;
 }
 
-.navigation__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.navigation__burger {
+  display: none;
 }
 
 .navigation__link {
@@ -105,6 +103,14 @@ h6 {
   font-size: 20px;
   line-height: 30px;
   color: #333333;
+}
+
+.navigation__link:hover {
+  color: #7EB7F0;
+}
+
+.navigation__link:active {
+  color: #fe7062;
 }
 
 .footer {
@@ -121,66 +127,75 @@ h6 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 20px 116px 37px 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  padding: 20px 37px 30px;
 }
 
 .footer__logo {
-  height: 100%;
-  margin: 0 0 auto;
+  margin: 0 30px auto 0;
 }
 
 .footer__body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  color: #ffffff;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .footer__text {
-  font-family: PT Sans;
+  font-family: "PT Sans", "Arial", "Helvetica", sans-serif;
+  font-weight: normal;
   font-size: 16px;
-  line-height: 20px;
-  margin: -4px 0 0 auto;
+  line-height: 26px;
+  color: white;
 }
 
-.footer__text:nth-child(1) {
-  margin-bottom: 4px;
+.header {
+  width: 100%;
+  height: auto;
+  background-color: white;
 }
 
 .header__content {
+  padding: 27px 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 27px 25px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .header__logo {
-  height: 100%;
   margin: auto 0;
-}
-
-.navigation__burger {
-  display: none;
-}
-
-.navigation__link {
-  color: #333333;
-  font-family: "Open Sans";
-  font-weight: bold;
-}
-
-.navigation__link:active {
-  color: #fe7062;
 }
 
 .start {
@@ -1458,22 +1473,22 @@ h6 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 
   .navigation__item {
     margin: auto 23px;
-  }
-
-  .navigation__link {
-    font-size: 20px;
-    line-height: 30px;
-  }
-
-  .navigation__link:hover {
-    color: #7EB7F0;
   }
 }
 
@@ -1521,9 +1536,7 @@ h6 {
   .content-narrow {
     max-width: 768px;
   }
-}
 
-@media (max-width: 1024px) {
   .button-yellow {
     font-size: 16px;
     padding: 12px 34px;
@@ -1531,66 +1544,60 @@ h6 {
 }
 
 @media (max-width: 767.98px) {
-  .header {
-    z-index: 10;
-    position: fixed;
-    width: 100%;
-    background-color: #fff;
-  }
-
-  .header__logo {
-    z-index: 5;
-  }
-
   .navigation__burger {
-    z-index: 5;
     display: block;
-    position: relative;
+    cursor: pointer;
+    z-index: 5;
+    margin: 0;
+    padding: 0;
     width: 30px;
     height: 18px;
-    cursor: pointer;
-    right: 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    bottom: auto;
+    right: auto;
   }
 
   .navigation__burger::before {
     content: "";
-    left: 0;
-    position: absolute;
     height: 10%;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #333333;
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    background-color: black;
-    top: 0;
   }
 
   .navigation__burger::after {
     content: "";
-    left: 0;
-    position: absolute;
     height: 10%;
     width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333333;
     -webkit-transition: all 0.3s ease 0s;
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    background-color: black;
-    bottom: 0;
   }
 
   .navigation__burger span {
-    left: 0;
-    position: absolute;
-    height: 10%;
-    width: 100%;
-    -webkit-transition: all 0.3s ease 0s;
-    -o-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    background-color: black;
-    top: 50%;
     -webkit-transform: scale(1) translate(0px, -50%);
         -ms-transform: scale(1) translate(0px, -50%);
             transform: scale(1) translate(0px, -50%);
+    height: 10%;
+    width: 100%;
+    position: absolute;
+    top: 54%;
+    left: 0;
+    background-color: #333333;
+    -webkit-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
   }
 
   .navigation__burger_active span {
@@ -1614,47 +1621,48 @@ h6 {
   }
 
   .navigation__body {
-    margin: 77px 0 0 0;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 30px 30px 30px 30px;
+    background-color: white;
     -webkit-transition: left  0.3s ease 0s;
     -o-transition: left  0.3s ease 0s;
     transition: left  0.3s ease 0s;
     overflow: auto;
+    margin: 77px 0 0 0;
+    padding: 30px;
+    width: 420px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    bottom: auto;
+    right: auto;
   }
 
   .navigation__body_active {
     left: 0;
   }
 
-  .navigation__body::before {
-    content: "";
-    position: fixed;
-    background-color: #fff;
-    width: 100%;
-    height: 77px;
-    top: 0;
-    left: 0;
+  .navigation__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .navigation__item {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin: 0 0 30px 0;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.2);
+    margin: 0 0 30px;
+    padding: 0 0 25px;
+    width: 100%;
+    height: auto;
   }
 
-  .navigation__item:last-child {
-    margin-bottom: 0;
-  }
-
-  .navigation__link {
-    font-size: 24px;
-    line-height: 36px;
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: auto;
+    right: auto;
+    z-index: 10;
   }
 
   .main {
@@ -1727,6 +1735,33 @@ h6 {
     padding: 50px 0 60px;
   }
 }
+
+@media (max-width: 479.98px) {
+  .navigation__body {
+    width: 100%;
+  }
+
+  .footer__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 20px 37px;
+  }
+
+  .footer__logo {
+    margin: 0 0 30px;
+  }
+
+  .footer__body {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
 @supports (-webkit-appearance:none){
 .ph-list__item{background-image:url(../img/dot.webp)}
 .FAQ__item{background-image:url(../img/minus.svg)}
@@ -1762,14 +1797,6 @@ h6 {
 
 }
 
- @media (max-width: 1024px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
  @media (max-width: 767.98px){
 
 @supports (-webkit-appearance:none){
@@ -1787,6 +1814,14 @@ h6 {
 }
 
  @media (max-width: 549px){
+
+@supports (-webkit-appearance:none){
+
+}
+
+}
+
+ @media (max-width: 479.98px){
 
 @supports (-webkit-appearance:none){
 
