--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -1,21 +1,106 @@
 .navigation {
 
+  &__burger {
+    display: none;
+
+    @include respond-to('max-medium') {
+      display: block;
+      cursor: pointer;
+      z-index: 5;
+
+      @include size (30px, 18px);
+      @include position (relative);
+
+        &::before {
+          content: "";
+
+          @include burger(0);
+        }
+
+        &::after {
+          content: "";
+
+          @include burger(100%);
+        }
+
+        & span {
+          transform: scale(1) translate(0px, -50%);
+
+          @include burger(54%);
+      }
+
+      &_active span {
+        transform: scale(0) translate(0px, -50%);
+      }
+
+      &_active::before {
+        top: 50%;
+        transform: rotate(-45deg) translate(0px, -50%);
+      }
+
+      &_active::after {
+        top: 50%;
+        transform: rotate(45deg) translate(0px, -50%);
+      }
+    }
+  }
+
   &__body {
+
+    @include respond-to('max-medium') {
+      background-color: rgba(255, 255, 255, 1);
+      transition: left  0.3s ease 0s;
+      overflow: auto;
+
+      @include size (420px, 100%, 77px 0 0 0, 30px);
+      @include position (fixed, 0, -100%);
+
+      &_active {
+        left: 0;
+      }
+    }
+
+    @include respond-to('max-small') {
+      width: 100%;
+    }
   }
 
   &__list {
-    display: flex;
+
+    @include respond-to('min-medium') {
+      @include flex (center);
+    }
+
+    @include respond-to('max-medium') {
+      flex-direction: column;
+    }
   }
 
   &__item {
+
+    @include respond-to('max-medium') {
+      border-bottom: 1px solid rgba(51, 51, 51, 0.2);
+
+      @include size (100%, auto, 0 0 30px, 0 0 25px);
+    }
+
+    @include respond-to('min-medium') {
+      margin: auto 23px;
+    }
   }
 
   &__link {
-    @include font (
-      $open-sans, 
-      bold, 
-      $navigation-font-size, 
-      $navigation-line-heigth, 
-      $navigation-color);
+    @include font ($navigation-font-family, bold, 
+                  $navigation-font-size, 
+                  $navigation-line-heigth, 
+                  $navigation-color);
+
+    &:hover {
+      color: #7EB7F0;
+    }
+
+    &:active {
+      color: #fe7062;
+    }
   }
 }
