--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -1,173 +1,17 @@
 .header {
+  @include section ($background-main-1);
 
-  @media (max-width: $md3 + px) {
+  @include respond-to('max-medium') {
+    @include position (fixed);
     z-index: 10;
-    position: fixed;
-    width: 100%;
-    background-color: #fff;
   }
   
   &__content {
-    display: flex;
-    justify-content: space-between;
     padding: 27px 25px;
+    @include flex (space-between);
   }
 
   &__logo {
-    height: 100%;
     margin: auto 0;
-
-    @media (max-width: $md3 + px) {
-      z-index: 5;
-    }
   }
-
-  &__navigation {
-  }
-}
-
-.navigation {
-
-  &__burger {
-    display: none;
-
-    @media (max-width: $md3 + px) {
-      z-index: 5;
-      display: block;
-      position: relative;
-      width: 30px;
-      height: 18px;
-      cursor: pointer;
-      right: 0;
-
-        &::before {
-          content: "";
-          left: 0;
-          position: absolute;
-          height: 10%;
-          width: 100%;
-          transition: all 0.3s ease 0s;
-          background-color: rgb(0, 0, 0);
-          top: 0;
-        }
-
-        &::after {
-          content: "";
-          left: 0;
-          position: absolute;
-          height: 10%;
-          width: 100%;
-          transition: all 0.3s ease 0s;
-          background-color: rgb(0, 0, 0);
-          bottom: 0;
-        }
-
-        & span {
-          left: 0;
-          position: absolute;
-          height: 10%;
-          width: 100%;
-          transition: all 0.3s ease 0s;
-          background-color: rgb(0, 0, 0);
-          top: 50%;
-          transform: scale(1) translate(0px, -50%);
-      }
-
-      &_active span {
-        transform: scale(0) translate(0px, -50%);
-      }
-
-      &_active::before {
-        top: 50%;
-        transform: rotate(-45deg) translate(0px, -50%);
-      }
-
-      &_active::after {
-        top: 50%;
-        transform: rotate(45deg) translate(0px, -50%);
-      }
-    }
-  }
-
-  &__body {
-
-    @media (max-width: $md3 + px) {
-      
-      margin: 77px 0 0 0;
-      position: fixed;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 30px 30px 30px 30px;
-      transition: left  0.3s ease 0s;
-      overflow: auto;
-
-      &_active {
-        left: 0;
-      }
-
-      &::before {
-        content: "";
-        position: fixed;
-        background-color: #fff;
-        width: 100%;
-        height: 77px;
-        top: 0;
-        left: 0;
-      }
-    }
-  }
-
-  &__list {
-
-    @media (min-width: $md3 + px) {
-      display: flex;
-      align-items: center;
-    }
-    
-  }
-
-  &__item {
-
-    @media (max-width: $md3 + px) {
-      flex-wrap: wrap;
-      margin: 0 0 30px 0;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    @media (min-width: $md3 + px){
-      margin: auto 23px;
-    }
-  }
-
-  &__link {
-
-    color: #333333;
-    font-family: "Open Sans";
-    font-weight: bold;
-
-    &:active {
-      color: #fe7062;
-    }
-
-    @media (max-width: $md3 + px) {
-      font-size: 24px;
-      line-height: 36px;
-    }
-
-      @media (min-width: $md3 + px) {
-
-        font-size: 20px;
-        line-height: 30px;
-
-        &:hover {
-          color: #7EB7F0;
-        }
-      }
-    }
 }
