--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,7 +3,8 @@
 
 @import 
   'abstracts/mixins',
-  'abstracts/variables';
+  'abstracts/variables',
+  'abstracts/placeholders';
 
 @import 
   'base/reset',
@@ -24,7 +25,6 @@
   'pages/team';
 
 // Блокировка прокрутки при работе меню-бургера
-
 .lock {
   overflow: hidden;
 }
@@ -92,7 +92,7 @@
     font-size: 18px;
   }
 
-  @media (max-width: 1024px) {
+  @media (max-width: 1080px) {
     font-size: 16px;
     padding: 12px 34px;
   }
