--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -1,27 +1,25 @@
 <header class="header">
-  <div class="container-wide">
-    <div class="header__content">
-      <a class="header__logo logo" href="index.html">
-        <img src="assets/img/logo.png" width="100px" alt="Логотип">
-      </a>
-      <div class="header__navigation navigation">
-        <div class="navigation__burger">
-          <span></span>
-        </div>
-        <nav class="navigation__body">
-          <ul class="navigation__list">
-            <li class="navigation__item">
-              <a class="navigation__link" href="concept.html">Концепция</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="team.html">Команда</a>
-            </li>
-            <li class="navigation__item">
-              <a class="navigation__link" href="contacts.html">Контакты</a>
-            </li>
-          </ul>
-        </nav>
+  <div class="header__content content-width">
+    <a class="header__logo logo" href="index.html">
+      <img src="assets/img/logo.png" width="100px" alt="Логотип">
+    </a>
+    <div class="header__navigation navigation">
+      <div class="navigation__burger">
+        <span></span>
       </div>
+      <nav class="navigation__body">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__link" href="concept.html">Концепция</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="team.html">Команда</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="contacts.html">Контакты</a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </div>
 </header>
