--- a/src/style/abstracts/_mixins.scss
+++ b/src/style/abstracts/_mixins.scss
@@ -27,12 +27,18 @@
   right: $right;
 }
 
-@mixin flex ($justify, $align: center, $direction: row, $wrap: nowrap, $display: flex) {
+@mixin flex ($direction: row, $justify: normal, $align: normal, $wrap: nowrap, $display: flex) {
   display: $display;
   justify-content: $justify;
   align-items: $align;
   flex-direction: $direction;
   flex-wrap: $wrap;
+}
+
+@mixin displayNone ($breakpoint, $display: none) {
+  @include respond-to($breakpoint) {
+    display: $display;
+  }
 }
 
 @mixin burger ($top, 
