--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -8,7 +8,7 @@
   
   &__content {
     padding: 27px 25px;
-    @include flex (space-between);
+    @include flex (row, space-between);
   }
 
   &__logo {
